--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "rules": {
     "no-unused-vars": "off"
+    //"@typescript-eslint/no-unused-vars": "off"
   },
   "extends": [
     "@rocketseat/eslint-config/react"
