--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.0.1",
+    "@types/uuid": "^9.0.2",
     "prettier-plugin-tailwindcss": "^0.4.0"
   }
 }
