--- a/package.json
+++ b/package.json
@@ -34,15 +34,18 @@
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-text-mask": "^5.5.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
+    "text-mask-addons": "^3.8.0",
     "typescript": "5.1.6",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.0.1",
+    "@types/react-text-mask": "^5.4.11",
     "@types/uuid": "^9.0.2",
     "prettier-plugin-tailwindcss": "^0.4.0"
   }
