--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@rocketseat/eslint-config": "^2.0.1",
     "@types/react-text-mask": "^5.4.11",
     "@types/uuid": "^9.0.2",
+    "jest": "^29.6.1",
     "prettier-plugin-tailwindcss": "^0.4.0"
   }
 }
