--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
@@ -45,10 +46,15 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
     "@rocketseat/eslint-config": "^2.0.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/react-text-mask": "^5.4.11",
     "@types/uuid": "^9.0.2",
     "jest": "^29.6.1",
-    "prettier-plugin-tailwindcss": "^0.4.0"
+    "jest-environment-jsdom": "^29.6.1",
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "ts-jest": "^29.1.1"
   }
 }
